--- a/partial/login/login.html
+++ b/partial/login/login.html
@@ -18,10 +18,11 @@
             email-error-message="e.g ashish.singh3@gmail.com"
             email-success-message="valid email"
             class="form-control"
+            placeholder="email"
             >
             </div>
             <div class="form-group">
-                <input ng-model="form.pwd"  validator="required" type="password" name="" class="form-control" id="" value="">
+                <input placeholder="password" ng-model="form.pwd"  validator="required" type="password" name="" class="form-control" id="" value="">
             </div>
             <div class="form-group">
               <button ng-click="submitForm(loginForm.$valid)" class="btn btn-primary btn-lg btn-block">Sign In</button>
