added growl notification

--- a/partial/login/login.html
+++ b/partial/login/login.html
@@ -19,10 +19,13 @@
             email-success-message="valid email"
             class="form-control"
             placeholder="email"
+
             >
             </div>
             <div class="form-group">
-                <input placeholder="password" ng-model="form.pwd"  validator="required" type="password" name="" class="form-control" id="" value="">
+                <input placeholder="password" ng-model="form.password"
+
+                  validator="required" type="password"  class="form-control" id="" value="">
             </div>
             <div class="form-group">
               <button ng-click="submitForm(loginForm.$valid)" class="btn btn-primary btn-lg btn-block">Sign In</button>
